--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        " 'debt_settlement_flag']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,12 +381,12 @@
        "      <th>int_rate</th>\n",
        "      <th>installment</th>\n",
        "      <th>annual_inc</th>\n",
+       "      <th>loan_status</th>\n",
        "      <th>dti</th>\n",
        "      <th>delinq_2yrs</th>\n",
        "      <th>inq_last_6mths</th>\n",
        "      <th>open_acc</th>\n",
        "      <th>pub_rec</th>\n",
-       "      <th>revol_bal</th>\n",
        "      <th>...</th>\n",
        "      <th>issue_d_Mar-2019</th>\n",
        "      <th>pymnt_plan_n</th>\n",
@@ -407,12 +407,12 @@
        "      <td>0.1719</td>\n",
        "      <td>375.35</td>\n",
        "      <td>66000.0</td>\n",
+       "      <td>low_risk</td>\n",
        "      <td>27.24</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1609.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -431,12 +431,12 @@
        "      <td>0.2000</td>\n",
        "      <td>929.09</td>\n",
        "      <td>105000.0</td>\n",
+       "      <td>low_risk</td>\n",
        "      <td>20.23</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>17.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>18368.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -455,12 +455,12 @@
        "      <td>0.2000</td>\n",
        "      <td>529.88</td>\n",
        "      <td>56000.0</td>\n",
+       "      <td>low_risk</td>\n",
        "      <td>24.26</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13247.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -479,12 +479,12 @@
        "      <td>0.1640</td>\n",
        "      <td>353.55</td>\n",
        "      <td>92000.0</td>\n",
+       "      <td>low_risk</td>\n",
        "      <td>31.44</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>17996.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -503,12 +503,12 @@
        "      <td>0.1474</td>\n",
        "      <td>520.39</td>\n",
        "      <td>52000.0</td>\n",
+       "      <td>low_risk</td>\n",
        "      <td>18.76</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>14.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>9091.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -523,23 +523,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 97 columns</p>\n",
+       "<p>5 rows × 96 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   loan_amnt  int_rate  installment  annual_inc    dti  delinq_2yrs  \\\n",
-       "0    10500.0    0.1719       375.35     66000.0  27.24          0.0   \n",
-       "1    25000.0    0.2000       929.09    105000.0  20.23          0.0   \n",
-       "2    20000.0    0.2000       529.88     56000.0  24.26          0.0   \n",
-       "3    10000.0    0.1640       353.55     92000.0  31.44          0.0   \n",
-       "4    22000.0    0.1474       520.39     52000.0  18.76          0.0   \n",
+       "   loan_amnt  int_rate  installment  annual_inc loan_status    dti  \\\n",
+       "0    10500.0    0.1719       375.35     66000.0    low_risk  27.24   \n",
+       "1    25000.0    0.2000       929.09    105000.0    low_risk  20.23   \n",
+       "2    20000.0    0.2000       529.88     56000.0    low_risk  24.26   \n",
+       "3    10000.0    0.1640       353.55     92000.0    low_risk  31.44   \n",
+       "4    22000.0    0.1474       520.39     52000.0    low_risk  18.76   \n",
        "\n",
-       "   inq_last_6mths  open_acc  pub_rec  revol_bal  ...  issue_d_Mar-2019  \\\n",
-       "0             0.0       8.0      0.0     1609.0  ...                 1   \n",
-       "1             0.0      17.0      1.0    18368.0  ...                 1   \n",
-       "2             0.0       8.0      0.0    13247.0  ...                 1   \n",
-       "3             1.0      10.0      1.0    17996.0  ...                 1   \n",
-       "4             1.0      14.0      0.0     9091.0  ...                 1   \n",
+       "   delinq_2yrs  inq_last_6mths  open_acc  pub_rec  ...  issue_d_Mar-2019  \\\n",
+       "0          0.0             0.0       8.0      0.0  ...                 1   \n",
+       "1          0.0             0.0      17.0      1.0  ...                 1   \n",
+       "2          0.0             0.0       8.0      0.0  ...                 1   \n",
+       "3          0.0             1.0      10.0      1.0  ...                 1   \n",
+       "4          0.0             1.0      14.0      0.0  ...                 1   \n",
        "\n",
        "   pymnt_plan_n  initial_list_status_f  initial_list_status_w  \\\n",
        "0             1                      0                      1   \n",
@@ -562,18 +562,17 @@
        "3                           0                1                       1  \n",
        "4                           0                1                       1  \n",
        "\n",
-       "[5 rows x 97 columns]"
+       "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Binary encoding using Pandas # pd.get_dummies\n",
-    "loans_binary_encoded = pd.get_dummies(df, columns=['loan_status',\n",
-    "                                                   'home_ownership',\n",
+    "loans_binary_encoded = pd.get_dummies(df, columns=['home_ownership',\n",
     "                                                   'verification_status',\n",
     "                                                   'issue_d',\n",
     "                                                   'pymnt_plan',\n",
@@ -587,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -597,6 +596,7 @@
        " 'int_rate',\n",
        " 'installment',\n",
        " 'annual_inc',\n",
+       " 'loan_status',\n",
        " 'dti',\n",
        " 'delinq_2yrs',\n",
        " 'inq_last_6mths',\n",
@@ -669,8 +669,6 @@
        " 'total_bal_ex_mort',\n",
        " 'total_bc_limit',\n",
        " 'total_il_high_credit_limit',\n",
-       " 'loan_status_high_risk',\n",
-       " 'loan_status_low_risk',\n",
        " 'home_ownership_ANY',\n",
        " 'home_ownership_MORTGAGE',\n",
        " 'home_ownership_OWN',\n",
@@ -692,7 +690,7 @@
        " 'debt_settlement_flag_N']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +932,7 @@
        "[5 rows x 95 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +961,7 @@
        "Name: loan_status, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +995,7 @@
        "Name: loan_status, Length: 68817, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1015,7 @@
        "(68817,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1339,7 +1337,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1375,7 @@
        "(51612, 95)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1448,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1474,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1500,7 @@
        "       [ 6229, 10889]], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1525,7 @@
        "0.6513903493398762"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1582,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1608,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1631,7 @@
        "0.6266855618808191"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1655,7 @@
        "       [ 6091, 11027]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1719,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1745,7 @@
        "LogisticRegression(random_state=78)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,17 +1760,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[  51,   36],\n",
-       "       [9681, 7437]], dtype=int64)"
+       "       [9682, 7436]], dtype=int64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,16 +1785,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5103309281216384"
+       "0.5103017191018931"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,8 +1866,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1888,7 +1888,7 @@
        "Name: loan_status, Length: 130480, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
        "       [7121, 9997]], dtype=int64)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1956,7 @@
        "0.6310830301638525"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
